--- a/style.css
+++ b/style.css
@@ -1,18 +1,41 @@
 html,
 body {
     margin: 0;
-    overflow: hidden;
-    height: 100%;
+    /*overflow: hidden;
+    height: 100%;*/
 }
-
+input {
+	float: right;
+	width: 50%;
+}
+audio {
+	width: 100%;
+}
 /* Scale canvas with resize attribute to full size */
 canvas[resize] {
-    width: 100%;
-    height: 90%;
+    height: 479px;
+	width: 100%;
+	padding-bottom: 50px;
 }
-
+.canvasdiv {
+	padding-bottom: 100px!important;
+}
+.fixeddiv {
+	max-width: 800px;
+	width: 90%;
+}
 .center {
     margin: auto;
-    width: 90%;
     padding: 0px;
- }
+}
+@media (max-width: 799px) {
+    canvas[resize] {
+		height: 279px;
+		width: 100%;
+		padding-bottom: 50px;
+	}
+	input {
+		float: left;
+		width: 100%;
+	}
+}
